# CLEAN_D-FINE

./: .gitignore  pyproject.toml  train.py
notebooks/: check-dataset.ipynb  prep-test-data.ipynb
src/clean_dfine/: __init__.py  config.py  dataset.py  evaluator.py  model.py  trainer.py
src/clean_dfine/arch/: denoising.py  dfine.py  dfine_decoder.py  dfine_utils.py  hgnetv2.py  hybrid_encoder.py  postprocessor.py  utils.py  yolo.py
src/clean_dfine/arch/postprocessorr/: box_revert.py  detr_postprocessor.py  nms_postprocessor.py
src/clean_dfine/evaluation/: evaluator.py  metrics.py  object_detection.py  report.py
src/clean_dfine/utils/: box_ops.py  to_bbox.py
